--- a/Netflix-clon/package.json
+++ b/Netflix-clon/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "movie": "^1.0.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "trailer": "^0.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
